--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Route-Task": "node dist/route-task/server/server.mjs",
-    "vercel-build": "npm run build:ssr"
+    "serve:ssr:Route-Task": "node dist/route-task/server/server.mjs"
   },
   "private": true,
   "dependencies": {
