--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,12 @@
   "version": 2,
   "public": true,
   "name": "route-task",
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+  "rewrites": [
+    {
+      "source": "/api/json-server/(.*)",
+      "destination": "/api/json-server.js"
+    }
+  ],
   "functions": {
     "api/index.js": {
       "includeFiles": "dist/route-task/browser/**"
