--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.3.8",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
