--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"ng serve -o\" \"npm run json:server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "json:server": "json-server --watch db/db.json",
     "test": "ng test",
     "serve:ssr:Route-Task": "node dist/route-task/server/server.mjs"
   },
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "concurrently": "^8.2.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
