--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"ng serve -o\" \"npm run json:server\"",
+    "start": "concurrently \"npm run start:ng\" \"npm run start:json-server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "json:server": "json-server --watch db/db.json",
     "test": "ng test",
     "serve:ssr:Route-Task": "node dist/route-task/server/server.mjs"
   },
